@@ -400,9 +400,11 @@ int test_main()
 	// on failing announces
 	announce_entry ae("dummy");
 	int last = 0;
+	session_settings sett;
+	sett.tracker_backoff = 250;
 	for (int i = 0; i < 10; ++i)
 	{
-		ae.failed(5);
+		ae.failed(sett, 5);
 		int delay = ae.next_announce_in();
 		TEST_CHECK(delay > last);
 		last = delay;
